# lcov-merge

./: Cargo.toml  Makefile  README.md  index.html  search-index.js
examples/: marge_files.rs
lcov_merge/: fn.merge_files.html  index.html  macro.impl_summary.html  macro.impl_try_merge_self_summary.html  sidebar-items.js  struct.Report.html
lcov_merge/attribute/: index.html  type.CheckSum.html  type.ExecutionCount.html  type.FunctionName.html  type.LineNumber.html  type.SourceFile.html  type.TestName.html
lcov_merge/branch/: index.html  struct.Branch.html  struct.BranchBlocks.html  struct.BranchUnit.html  struct.Branches.html
lcov_merge/counter/: index.html  trait.FoundCounter.html  trait.Hit.html  trait.HitCounter.html  trait.HitFoundCounter.html
lcov_merge/file/: index.html  struct.File.html  struct.Files.html
lcov_merge/function/: index.html  struct.Function.html  struct.Functions.html
lcov_merge/line/: index.html  struct.Line.html  struct.Lines.html
lcov_merge/merger/: fn.merge_files.html
lcov_merge/report/: struct.Report.html
lcov_merge/summary/: index.html  trait.Summary.html
lcov_merge/test/: index.html  struct.Test.html  struct.Tests.html
src/: branch.rs  file.rs  function.rs  lib.rs  line.rs  macros.rs  merge.rs  record.rs  report.rs  test.rs  test_sum.rs
src/merger/: merger.rs  mod.rs
src/parser/: report.rs
src/report/: attribute.rs  branch.rs  counter.rs  file.rs  function.rs  line.rs  mod.rs  summary.rs  test.rs
src/result/: branch.rs  file.rs  function.rs  line.rs  mod.rs  summary.rs  test.rs
tests/: .lcovrc
(+64 files in other folders)
